k8s/Deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: myapp
        image: myapp:latest
        volumeMounts:
        - name: app-storage
          mountPath: /mnt/data/app
        resources:  # Adding resource requests and limits
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      - name: sidecar-container
        image: logging-sidecar:1.0.0  # Use a specific version tag
        volumeMounts:
        - name: app-storage
          mountPath: /logs
        command: ["/bin/sh", "-c", "tail -f /logs/app.log"]
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30003
  selector:
    app: my-app
