k8s/Network-Policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-redis
spec:
  podSelector:
    matchLabels:
      app: my-app  # Label of the application Pods
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mongo  # Label of the MongoDB Pods
    ports:
    - protocol: TCP
      port: 27017  # MongoDB default port
  - from:
    - podSelector:
        matchLabels:
          app: redis  # Label of the Redis Pods
    ports:
    - protocol: TCP
      port: 6379  # Redis default port
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongo  # Label of the MongoDB Pods
    ports:
    - protocol: TCP
      port: 27017  # MongoDB default port
  - to:
    - podSelector:
        matchLabels:
          app: redis  # Label of the Redis Pods
    ports:
    - protocol: TCP
      port: 6379  # Redis default port
  policyTypes:
  - Ingress
  - Egress
